Fix indentation in dusk_lights.yaml value_template

--- a/dusk_lights.yaml
+++ b/dusk_lights.yaml
@@ -79,7 +79,8 @@ action:
   - choose:
       - conditions:
           - condition: template
-            value_template: "{{ state_attr('sun.sun', 'elevation') | float < twilight_elevation | float }}"
+            value_template: > 
+              {{ state_attr('sun.sun', 'elevation') | float < twilight_elevation | float }}
         sequence:
           - service: light.turn_on
             target:
